# akshare-one

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  README_zh.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: auto-merge-dependabot.yml  gh-pages.yml  python-app.yml
akshare_one/: __init__.py  financial.py  indicators.py  insider.py  news.py  stock.py
akshare_one/adapters/: __init__.py  eastmoney.py  sina.py  xueqiu.py
akshare_one/adapters/cache/: cache.py
akshare_one/eastmoney/: client.py
akshare_one/modules/: cache.py
akshare_one/modules/eastmoney/: client.py  utils.py
akshare_one/modules/financial/: base.py  eastmoney.py  eastmoney_direct.py  factory.py  sina.py
akshare_one/modules/historical/: base.py  eastmoney.py  eastmoney_direct.py  factory.py  sina.py
akshare_one/modules/indicators/: base.py  factory.py  simple.py  talib.py
akshare_one/modules/info/: base.py  eastmoney.py  factory.py
akshare_one/modules/insider/: base.py  factory.py  xueqiu.py
akshare_one/modules/news/: base.py  eastmoney.py  factory.py
akshare_one/modules/realtime/: base.py  eastmoney.py  eastmoney_direct.py  factory.py  xueqiu.py
api/basic-info/: index.html
api/financial/: index.html
api/historical/: index.html
api/indicators/: index.html
api/insider/: index.html
api/news/: index.html
api/overview/: index.html
api/realtime/: index.html
docs/: api.md  examples.md  index.md  quickstart.md
docs/api/: basic-info.md  financial.md  historical.md  indicators.md  insider.md  news.md  overview.md  realtime.md
examples/: index.html
quickstart/: index.html
search/: search_index.json
src/akshare_one/: __init__.py  indicators.py
src/akshare_one/eastmoney/: client.py  utils.py
src/akshare_one/modules/: cache.py  utils.py
src/akshare_one/modules/financial/: base.py  eastmoney_direct.py  factory.py  sina.py
src/akshare_one/modules/historical/: base.py  eastmoney.py  eastmoney_direct.py  factory.py  sina.py
src/akshare_one/modules/indicators/: base.py  factory.py  simple.py  talib.py
src/akshare_one/modules/info/: base.py  eastmoney.py  factory.py
src/akshare_one/modules/insider/: base.py  factory.py  xueqiu.py
src/akshare_one/modules/news/: base.py  eastmoney.py  factory.py
src/akshare_one/modules/realtime/: base.py  eastmoney.py  eastmoney_direct.py  factory.py  xueqiu.py
tests/: test_financial.py  test_indicators.py  test_info.py  test_insider.py  test_news.py  test_stock.py
