[project]
name = "akshare-one"
version = "0.3.4"
description = "Standardized interface for Chinese financial market data, built on AKShare with unified data formats and simplified APIs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.17.20",
    "cachetools>=5.5.2",
]
license = "MIT"
keywords = ["akshare", "financial-data", "stock-data", "quant"]

[project.urls]
Homepage = "https://github.com/zwldarren/akshare-one"
Repository = "https://github.com/zwldarren/akshare-one.git"

[project.optional-dependencies]
talib = [
    "ta-lib>=0.6.4",
]

[dependency-groups]
dev = [
    "mkdocs-material>=9.6.15",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.1",
]

[tool.setuptools]
packages = ["akshare_one"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --cov=akshare_one --cov-report=term-missing"
